--- a/.github/workflows/track_benches.yml
+++ b/.github/workflows/track_benches.yml
@@ -18,7 +18,8 @@ jobs:
       BENCHER_PROJECT: diesel
       BENCHER_ADAPTER: rust_criterion
       BENCHER_TESTBED: ubuntu-latest-${{ matrix.backend }}
-      BENCHMARK_RESULTS: ${{ matrix.backend }}.txt
+      PR_BENCHMARK_RESULTS: pr_${{ matrix.backend }}.txt
+      BASE_BENCHMARK_RESULTS: base_${{ matrix.backend }}.txt
       GITHUB_EVENT: event.json
     steps:
       - name: Download Benchmark Results
@@ -46,11 +47,13 @@ jobs:
               let fs = require('fs');
               fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/${artifactName}.zip`, Buffer.from(download.data));
             }
-            await downloadArtifact(process.env.BENCHMARK_RESULTS);
+            await downloadArtifact(process.env.PR_BENCHMARK_RESULTS);
+            await downloadArtifact(process.env.BASE_BENCHMARK_RESULTS);
             await downloadArtifact(process.env.GITHUB_EVENT);
       - name: Unzip Benchmark Results
         run: |
-          unzip $BENCHMARK_RESULTS.zip
+          unzip $PR_BENCHMARK_RESULTS.zip
+          unzip $BASE_BENCHMARK_RESULTS.zip
           unzip $GITHUB_EVENT.zip
       - name: Export GitHub Event Data
         uses: actions/github-script@v6
@@ -59,32 +62,34 @@ jobs:
             let fs = require('fs');
             let githubEvent = JSON.parse(fs.readFileSync(process.env.GITHUB_EVENT, {encoding: 'utf8'}));
             console.log(githubEvent);
-            if (githubEvent.ref) {
-              core.exportVariable("EVENT_NAME", "push");
-              core.exportVariable("PUSH_REF", githubEvent.ref);
-            } else {
-              core.exportVariable("EVENT_NAME", "pull_request");
-              core.exportVariable("PR_HEAD", githubEvent.pull_request.head.ref);
-              core.exportVariable("PR_BASE", githubEvent.pull_request.base.ref);
-              core.exportVariable("PR_DEFAULT", githubEvent.pull_request.base.repo.default_branch);
-              core.exportVariable("PR_NUMBER", githubEvent.number);
-            }
+            core.exportVariable("PR_HEAD", `${githubEvent.pull_request.head.ref}-${githubEvent.pull_request.head.sha.slice(0, 8)}`);
+            core.exportVariable("PR_ID", `${githubEvent.pull_request.head.ref}/${process.env.BENCHER_TESTBED}/${process.env.BENCHER_ADAPTER}`);
+            core.exportVariable("PR_NUMBER", githubEvent.number);
       - uses: bencherdev/bencher@main
-      - name: Track Benchmarks
+      - name: Track base Benchmarks
         run: |
-          (${{ env.EVENT_NAME == 'push' && env.PUSH_REF == 'refs/heads/master' }} && \
-          bencher run \
-          --branch "master" \
-          --token "${{ secrets.BENCHER_API_TOKEN }}" \
-          --err \
-          --file "$BENCHMARK_RESULTS") || \
-          (${{ env.EVENT_NAME == 'pull_request'}} && \
           bencher run \
           --if-branch '${{ env.PR_HEAD }}' \
-          --else-if-branch '${{ env.PR_BASE }}' \
-          --else-if-branch '${{ env.PR_DEFAULT }}' \
+          --else-branch \
+          --token "${{ secrets.BENCHER_API_TOKEN }}" \
+          --file "$BASE_BENCHMARK_RESULTS"
+      - name: Create PR threshold
+        run: |
+          bencher threshold create \
+          --project "$BENCHER_PROJECT" \
+          --branch '${{ env.PR_HEAD }}' \
+          --testbed "$BENCHER_TESTBED" \
+          --measure latency \
+          --test t \
+          --upper-boundary 0.98 \
+          --token "${{ secrets.BENCHER_API_TOKEN }}"
+      - name: Track PR Benchmarks
+        run: |
+          bencher run \
+          --branch '${{ env.PR_HEAD }}' \
+          --token "${{ secrets.BENCHER_API_TOKEN }}" \
+          --ci-id '${{ env.PR_ID }}' \
           --ci-number '${{ env.PR_NUMBER }}' \
           --github-actions "${{ secrets.GITHUB_TOKEN }}" \
-          --token "${{ secrets.BENCHER_API_TOKEN }}" \
           --err \
-          --file "$BENCHMARK_RESULTS")
+          --file "$PR_BENCHMARK_RESULTS"
